--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=fdk-aac
-version=1.0
+version=0.1
 author=Phil Schatzmann
 maintainer= <phil.schatzmann@gmail.com>
 sentence=Arduino AAC Coder and Decoder 
 paragraph=Encoding and Decoding of AAC files
 category=Other
-url=https://github.com/pschatzmann/fdk-aac.git
+url=https://github.com/pschatzmann/arduino-fdk-aac.git
 architectures=*
 
