1. Add support for compiling in esp idf 2. Minor compilation warning fixes 3. Assembly optimsations for esp32 - tested on esp32s3 with HE-AACv2 (Aka AAC with SBR & PS)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,36 @@
 cmake_minimum_required(VERSION 3.16)
 
-# set the project name
-project(fdk_aac)
+if (DEFINED ESP_PLATFORM)
+  # idf component
+  idf_component_register(
+    SRC_DIRS src src/libAACdec src/libFDK src/libSYS src/libArithCoding src/libMpegTPDec src/libSACdec src/libDRCdec src/libSBRdec src/libPCMutils
+    INCLUDE_DIRS src src/libAACdec src/libFDK src/libSYS src/libArithCoding src/libMpegTPDec src/libSACdec src/libDRCdec src/libSBRdec src/libPCMutils
+    REQUIRES arduino-esp32
+  )
 
-# lots of warnings and all warnings as errors
-## add_compile_options(-Wall -Wextra )
-set(CMAKE_CXX_STANDARD 17)
+  target_compile_options(${COMPONENT_LIB} INTERFACE -Wno-error -Wno-format -Wno-format-security -Wformat=0)
+  target_compile_options(${COMPONENT_LIB} PRIVATE -DUSE_DEFAULT_STDLIB)
+  add_compile_definitions(ESP32)
+else()
+    # set the project name
+    project(fdk_aac)
 
-file(GLOB_RECURSE SRC_LIST_CPP CONFIGURE_DEPENDS  "${PROJECT_SOURCE_DIR}/src/*.cpp" )
+    # lots of warnings and all warnings as errors
+    ## add_compile_options(-Wall -Wextra )
+    set(CMAKE_CXX_STANDARD 17)
 
-# define libraries
-add_library (fdk_aac ${SRC_LIST_CPP})
+    file(GLOB_RECURSE SRC_LIST_CPP CONFIGURE_DEPENDS  "${PROJECT_SOURCE_DIR}/src/*.cpp" )
 
-# prevent compile errors
-#target_compile_options(fdk_aac PRIVATE -DUSE_DEFAULT_STDLIB)
+    # define libraries
+    add_library (fdk_aac ${SRC_LIST_CPP})
 
-# define location for header files
-target_include_directories(fdk_aac PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src )
+    # prevent compile errors
+    #target_compile_options(fdk_aac PRIVATE -DUSE_DEFAULT_STDLIB)
 
-# build examples
-add_subdirectory( "${CMAKE_CURRENT_SOURCE_DIR}/examples/decode")
-add_subdirectory( "${CMAKE_CURRENT_SOURCE_DIR}/examples/encode")
+    # define location for header files
+    target_include_directories(fdk_aac PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src )
+
+    # build examples
+    add_subdirectory( "${CMAKE_CURRENT_SOURCE_DIR}/examples/decode")
+    add_subdirectory( "${CMAKE_CURRENT_SOURCE_DIR}/examples/encode")
+endif()
